fix: navbar not centered

--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -68,11 +68,12 @@ nav{
   .navbar{
     position: absolute;
     top:100%;
-    width: 100%;;
+    width: 90%;
+    height: 394px;
+    margin: 0 auto;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(6 , 1fr);
-    height: 394px;
     transform: scale(1 , 0);
     transform-origin: top;
     transition: transform .3s ease-in;
@@ -96,8 +97,8 @@ nav{
           content: '';
           position: absolute;
           top:calc(100% + 24px);
-          left: 14px;
-          right: 14px;
+          left: 0.5rem;
+          right: 0.5rem;
           border-bottom: 1px solid rgba(42, 42, 42, 0.1);
 
         }
@@ -694,7 +695,7 @@ footer{
                 height: 25px;
                 width: 25px;
                 &:checked{
-              box-shadow: inset 0  0  0  6px $dark-gray;
+                  box-shadow: inset 0  0  0  6px $dark-gray;
                 }
               }
             }
